# bbb-zh

./: ChangeLog  Makefile.am  README  autogen.sh  configure.in  configure.sh  libaliplatform.pc.in  version_autogenerated.h
examples/: Makefile.am  aliplatformkit.c
lib/: Makefile.am
lib/libalislavsync/: Makefile.am  configure.ac  libalislavsync.pc.in
lib/libalislavsync/examples/: Makefile.am  alislavsynckit.c
lib/libalislavsync/include/: Makefile.am  alislavsync.h
lib/libalislavsync/src/: Makefile.am  alislavsync.c  internal.h
lib/libalislcc/: Makefile.am  configure.ac  libalislcc.pc.in
lib/libalislcc/examples/: Makefile.am  alislsdeckit.c
lib/libalislcc/include/: Makefile.am  alislcc.h
lib/libalislcc/src/: Makefile.am  alislcc.c  internal.h
lib/libalislce/: Makefile.am  README  configure.in  libalislce.pc.in
lib/libalislce/examples/: Makefile.am  alislcekit.c
lib/libalislce/include/: Makefile.am  alislce.h
lib/libalislce/src/: Makefile.am  alisl_ce_api.c  alislcf.c  ce_internal.h
lib/libalislcic/: AUTHORS  ChangeLog  Makefile.am  README  configure.in  libalislcic.pc.in
lib/libalislcic/examples/: Makefile.am  alislcickit.c
lib/libalislcic/include/: Makefile.am  alislcic.h
lib/libalislcic/src/: Makefile.am  alislcic.c  alislcicwrapper.c  internal.h
lib/libalislcli/: .gitignore  Makefile.am  README  configure.ac  libalislcli.pc.in
lib/libalislcli/examples/: Makefile.am  clitest.txt  dvbcli.c
lib/libalislcli/include/: Makefile.am  alislcli.h
lib/libalislcli/src/: Makefile.am  libalislcli.c
lib/libalislconaxvsc/: Makefile.am  README  configure.in  libalislconaxvsc.pc.in
lib/libalislconaxvsc/examples/: Makefile.am  alislconaxvsckit.c
lib/libalislconaxvsc/include/: Makefile.am  alislconaxvsc.h
lib/libalislconaxvsc/src/: Makefile.am  alislconaxvsc.c  internal.h
lib/libalisldb/: .gitignore  Makefile.am  README  configure.ac  libalisldb.pc.in
lib/libalisldb/examples/: Makefile.am  alisldbkit.c
lib/libalisldb/include/: Makefile.am  alisldb.h  alisldb_sys.h
lib/libalisldb/src/: Makefile.am  alisldb.conf  alisldb_common.c  alisldb_sys.c  dvb_default.sql  error.h  hbbtv_default.sql  internal.h  ott_default.sql  sys_default.sql
lib/libalisldb/test_dbus/: Makefile.1  dbus_example  dbus_example.c
lib/libalisldis/: Makefile.am  configure.ac  libalisldis.pc.in
lib/libalisldis/include/: Makefile.am  alisldis.h
lib/libalisldis/src/: Makefile.am  alisldis.c  internal.h
lib/libalisldis/tests/: alisldis_test.c  alisldis_test.h  dis_test.c  test_antiflicker_onoff.c  test_get_aspect.c  test_get_dis_mode.c  test_get_mp_info.c  test_get_screen_rect.c  test_gma_global_alpha.c  test_gma_scale.c  test_open_close.c  test_set_aspect_ratio.c  test_set_bg.c  test_set_enhance.c  test_set_tvsys.c  test_win_onoff.c  test_zoom.c
lib/libalisldmx/: Makefile.am  README  configure.ac  libalisldmx.pc.in
lib/libalisldmx/examples/: Makefile.am  alisldmxkit.c
lib/libalisldmx/include/: Makefile.am  alisldmx.h
lib/libalisldmx/src/: Makefile.am  alisldmx.c  internal.h  misc.h
lib/libalisldmx/tests/: alisldmx_test.c  alisldmx_test.h  alisldmx_test_openclose.c  alisldmx_test_startstop.c
lib/libalisldsc/: Makefile.am  README  configure.in  libalisldsc.pc.in
lib/libalisldsc/examples/: Makefile.am  alisldsckit.c  descramble_stream.c  keyladdersample.c  keyladdersample.h
lib/libalisldsc/include/: Makefile.am  alisldsc.h  alislvmx.h
lib/libalisldsc/src/: Makefile.am  alisl_algo_api.c  alisl_pvr_api.c  alisl_sha_api.c  alisldsc.c  alislvmx.c  dsc_internal.h
lib/libalislevent/: Makefile.am  configure.ac  libalislevent.pc.in
lib/libalislevent/include/: Makefile.am  alislevent.h
lib/libalislevent/src/: Makefile.am  alislevent.c
lib/libalislfake/: AUTHORS  ChangeLog  Makefile.am  README  configure.in  libalislfake.pc.in
lib/libalislfake/examples/: Makefile.am  alislfakekit.c  alislfakekit.h
lib/libalislfake/include/: Makefile.am  alislfake.h
lib/libalislgpio/: Makefile.am  configure.ac  libalislgpio.pc.in
lib/libalislhdmi/: Makefile.am  README  configure.ac  libalislhdmi.pc.in
lib/libalisli2c/: Makefile.am  libalisli2c.pc.in
lib/libalislinput/: Makefile.am  README  configure.ac  libalislinput.pc.in
lib/libalislnim/: Makefile.am  autogen.sh  configure.ac  libalislnim.pc.in
lib/libalislotp/: AUTHORS  Makefile.am  README  configure.in  libalislotp.pc.in
lib/libalislpe/: Makefile.am  configure.ac  libalislpe.pc.in
lib/libalislsbm/: Makefile.am  README  configure.ac  libalislsbm.pc.in
lib/libalislscart/: Makefile.am  README  configure.in  libalislscart.pc.in
lib/libalislsdec/: .gitignore  Makefile.am  README  configure.ac  libalislsdec.pc.in
lib/libalislsmc/: Makefile.am  configure.ac  libalislsmc.pc.in
lib/libalislsnd/: Makefile.am  configure.ac  libalislsnd.pc.in
lib/libalislsoc/: Makefile.am  README  autogen.sh  configure.in  libalislsoc.pc.in
lib/libalislstandby/: Makefile.am  README  configure.in  libalislstandby.pc.in
lib/libalislstorage/: Makefile.am  README  configure.in  libalislstorage.pc.in
lib/libalislsysinfo/: Makefile.am  README  configure.in  libalislsysinfo.pc.in
lib/libalisltrng/: .gitignore  Makefile.am  README  configure.in  libalisltrng.pc.in
lib/libalisltsg/: Makefile.am  README  configure.ac  libalisltsg.pc.in
lib/libalisltsi/: Makefile.am  configure.ac  libalisltsi.pc.in
lib/libalislupgrade_v3/: AUTHORS  configure.in  libalislupgrade.pc.in
lib/libalislupgrade_v4/: ChangeLog  Makefile.am  README
lib/libalislvbi/: Makefile.am  autogen.sh  configure.ac  libalislvbi.pc.in
lib/libalislvdec/: Makefile.am  README  configure.ac  libalislvdec.pc.in
lib/libalislwatchdog/: AUTHORS  Makefile.am  configure.in  libalislwatchdog.pc.in
lib/libaliunity/: Makefile.am  libaliunity.pc.in
src/: .gitignore  Makefile.am  flag.c  log.c  platform.c
tests/: Makefile.am  README.txt  ini_config.c  ini_config.h  pltftest.c  sltest_common.c  sltest_common.h
tests/board_config/: aliplatform_test_config_3515.ini  aliplatform_test_config_3715.ini  aliplatform_test_config_3733.ini
(+364 files in other folders)
