## Makefile.am for aliplatform library

SUBDIRS =

if BUILD_LIBCLI
SUBDIRS += libalislcli
endif

if BUILD_LIBUNITY
SUBDIRS += libaliunity
endif

if BUILD_DB
SUBDIRS += libalisldb
endif

if BUILD_LIBDMX
SUBDIRS += libalisldmx
endif

if BUILD_LIBSDEC
SUBDIRS += libalislsdec
endif

if BUILD_LIBCC
SUBDIRS += libalislcc
endif

if BUILD_LIBTRNG
SUBDIRS += libalisltrng
endif

if BUILD_LIBSMC
SUBDIRS += libalislsmc
endif

if BUILD_LIBINPUT
SUBDIRS += libalislinput
endif

if BUILD_LIBEVENT
SUBDIRS += libalislevent
endif

if BUILD_LIBFAKE
SUBDIRS += libalislfake
endif

if BUILD_LIBSCART
SUBDIRS += libalislscart
endif

if BUILD_LIBSTANDBY
SUBDIRS += libalislstandby
endif

if BUILD_LIBDSC
SUBDIRS += libalisldsc
endif

if BUILD_LIBCIC
SUBDIRS += libalislcic
endif

if BUILD_LIBSTORAGE
SUBDIRS += libalislstorage
endif

if BUILD_LIBSYSINFO
SUBDIRS += libalislsysinfo
endif

if BUILD_LIBSND
SUBDIRS += libalislsnd
endif

if BUILD_LIBI2C
SUBDIRS += libalisli2c
endif

if BUILD_LIBGPIO
SUBDIRS += libalislgpio
endif

if BUILD_LIBNIM
SUBDIRS += libalislnim
endif

if BUILD_LIBTSI
SUBDIRS += libalisltsi
endif

if BUILD_LIBDIS
SUBDIRS += libalisldis
endif

if BUILD_LIBVDEC
SUBDIRS += libalislvdec
endif

if BUILD_LIBTSG
SUBDIRS += libalisltsg
endif

if BUILD_LIBCE
SUBDIRS += libalislce
endif


if BUILD_LIBWATCHDOG
SUBDIRS += libalislwatchdog
endif

if BUILD_LIBVBI
SUBDIRS += libalislvbi
endif

if BUILD_LIBHDMI
SUBDIRS += libalislhdmi
endif

if BUILD_LIBOTP
SUBDIRS += libalislotp
endif

if BUILD_LIBSOC
SUBDIRS += libalislsoc
endif

if BUILD_LIBAVSYNC
SUBDIRS +=  libalislavsync
endif

if BUILD_LIBPE
SUBDIRS +=  libalislpe
endif

if BUILD_LIBSBM
SUBDIRS +=  libalislsbm
endif

if BUILD_LIBUPGRADE_V3
SUBDIRS += libalislupgrade_v3
endif

if BUILD_LIBUPGRADE_V4
SUBDIRS += libalislupgrade_v4
endif

if BUILD_LIBCONAXVSC
SUBDIRS += libalislconaxvsc
endif
