#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libalislcic], [0.0.0], [Owen.Zhao@alitech.com], [libalislcic], [http://www.alitech.com])
AC_PREREQ([2.68])
AC_CONFIG_HEADER([config.h])

LIBALISLTEMPLATE_MAJOR_VERSION=0
LIBALISLTEMPLATE_MINOR_VERSION=0
LIBALISLTEMPLATE_MICRO_VERSION=0
LIBALISLTEMPLATE_INTERFACE_AGE=0
LIBALISLTEMPLATE_BINARY_AGE=0
LIBALISLTEMPLATE_VERSION=$LIBALISLTEMPLATE_MAJOR_VERSION.$LIBALISLTEMPLATE_MINOR_VERSION.$LIBALISLTEMPLATE_MICRO_VERSION

AC_SUBST(LIBALISLTEMPLATE_MAJOR_VERSION)
AC_SUBST(LIBALISLTEMPLATE_MINOR_VERSION)
AC_SUBST(LIBALISLTEMPLATE_MICRO_VERSION)
AC_SUBST(LIBALISLTEMPLATE_INTERFACE_AGE)
AC_SUBST(LIBALISLTEMPLATE_BINARY_AGE)
AC_SUBST(LIBALISLTEMPLATE_VERSION)

AC_DEFINE_UNQUOTED(LIBALISLTEMPLATE_VERSION, "$LIBALISLTEMPLATE_VERSION", [The libalislcic version])
AC_DEFINE_UNQUOTED(LIBALISLTEMPLATE_MAJOR_VERSION, $LIBALISLTEMPLATE_MAJOR_VERSION, [The libalislcic major version])
AC_DEFINE_UNQUOTED(LIBALISLTEMPLATE_MINOR_VERSION, $LIBALISLTEMPLATE_MINOR_VERSION, [The libalislcic minor version])
AC_DEFINE_UNQUOTED(LIBALISLTEMPLATE_MICRO_VERSION, $LIBALISLTEMPLATE_MICRO_VERSION, [The libalislcic micro version])

PACKAGE=libalislcic
VERSION=$LIBALISLTEMPLATE_VERSION

# libtool versioning
LT_RELEASE=$LIBALISLTEMPLATE_MAJOR_VERSION.$LIBALISLTEMPLATE_MINOR_VERSION
LT_CURRENT=`expr $LIBALISLTEMPLATE_MICRO_VERSION - $LIBALISLTEMPLATE_INTERFACE_AGE`
LT_BINARY=`expr $LIBALISLTEMPLATE_MICRO_VERSION - $LIBALISLTEMPLATE_BINARY_AGE`
LT_REVISION=$LIBALISLTEMPLATE_INTERFACE_AGE
LT_AGE=`expr $LIBALISLTEMPLATE_BINARY_AGE - $LIBALISLTEMPLATE_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_BINARY)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

# Checks for programs.

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CHECK_FUNCS([getopt getopt_long])

AC_ARG_ENABLE(examples,
			  AC_HELP_STRING([--enable-examples],              
						     [build test programs @<:@default=no@:>@]),
			  [], [enable_examples=no])
AM_CONDITIONAL(BUILD_EXAMPLES, test "$enable_examples" = "yes")


AC_ARG_ENABLE(docs,
			  AC_HELP_STRING([--enable-docs],
					 [build documentation @<:@default=no@:>@]),
			  [], [enable_docs=no])
AM_CONDITIONAL(BUILD_DOCUMENT, test "$enable_docs" = "yes")

if test "$enable_docs" = "yes"; then
	AC_CHECK_PROG(DOXYGEN, [doxygen], [true], [false])
fi
AM_CONDITIONAL(HAVE_DOXYGEN, [test "$DOXYGEN" = "true"])

AM_CONDITIONAL(BUILD_SHARED, test "$enable_shared" = "yes")
AM_CONDITIONAL(BUILD_STATIC, test "$enable_static" = "yes")

AC_OUTPUT([
Makefile
libalislcic.pc

src/Makefile

include/Makefile

examples/Makefile

doc/Makefile
doc/doxygen/Makefile
])
