dnl
dnl libalislcli configure.ac
dnl
AC_INIT([libalislcli], [0.0.0], [summer.xia@alitech.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
LT_INIT
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
Makefile
libalislcli.pc
include/Makefile
src/Makefile
examples/Makefile
doc/Makefile
doc/doxygen/Makefile
])

AC_OUTPUT

